<resources>
    <string name="app_name">EyeDoc</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">My Schedule</string>
    <string name="second_fragment_label">Add Medication</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select">Select Medication</string>
    <string name="select2">Which Eye?</string>
    <string name="select3">How Many Days?</string>
    <string name="select4">How Many Times Per Day?</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Take Your Pills</string>
    <string name="nav_header_subtitle">MyEyeDrops.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_drops">My Drops</string>
    <string name="menu_settings">Settings</string>

</resources>