<?xml version="1.0" encoding="utf-8"?>
<!--<menu xmlns:android="http://schemas.android.com/apk/res/android">-->

<!--    <item-->
<!--        android:id="@+id/miItem1"-->
<!--        android:title="Item 1"/>-->

<!--    <item-->
<!--        android:id="@+id/miItem2"-->
<!--        android:title="Item 2"/>-->

<!--    <item-->
<!--        android:id="@+id/miItem3"-->
<!--        android:title="Item 3"/>-->
<!--</menu>-->


<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_drops"
            android:icon="@drawable/ic_menu_drops"
            android:title="@string/menu_drops" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>